apps/tencentcloud/jenkins/post/_base/cargo-mirror/tests/patched-runner-with-sidecars.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-runner-with-sidecars
  namespace: jenkins-tiflash
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: runner
      image: busybox:1.36
      volumeMounts:
        - name: cargo-mirror-config
          mountPath: /home/jenkins/.cargo/config.toml
          subPath: config.toml
          readOnly: true
    - name: utils
      image: busybox:1.36
    - name: docker
      image: busybox:1.36
    - name: jnlp
      image: busybox:1.36
  volumes:
    - name: cargo-mirror-config
      configMap:
        name: cargo-mirror-v2
