apps/tencentcloud/jenkins/post/_base/cargo-mirror/tests/patched-runner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-runner
  namespace: jenkins-tikv
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: runner
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - name: cargo-mirror-config
          mountPath: /home/jenkins/.cargo/config.toml
          subPath: config.toml
          readOnly: true
    - name: jnlp
      image: busybox:1.36
  volumes:
    - name: cargo-mirror-config
      configMap:
        name: cargo-mirror-v2
