apps/tencentcloud/jenkins/post/_base/cargo-mirror/tests/resource-no-jenkins-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-jenkins-label
  namespace: jenkins-tikv
spec:
  containers:
    - name: runner
      image: busybox:1.36
