apps/tencentcloud/jenkins/post/_base/cargo-mirror/tests/resource-no-runner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-runner
  namespace: jenkins-tikv
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: utils
      image: busybox:1.36
    - name: docker
      image: busybox:1.36
    - name: jnlp
      image: busybox:1.36
