apps/tencentcloud/jenkins/post/_base/cargo-mirror/tests/resource-runner-with-sidecars.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-runner-with-sidecars
  namespace: jenkins-tiflash
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: runner
      image: busybox:1.36
    - name: utils
      image: busybox:1.36
    - name: docker
      image: busybox:1.36
    - name: jnlp
      image: busybox:1.36
