apps/tencentcloud/jenkins/post/_base/cargo-mirror/tests/resource-runner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-runner
  namespace: jenkins-tikv
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: runner
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
    - name: jnlp
      image: busybox:1.36
